fix(Commons): text truncation improvements

--- a/client/src/components/commons/Commons.css
+++ b/client/src/components/commons/Commons.css
@@ -248,7 +248,7 @@
 }
 
 .commons-author-card {
-    height: 175px;
+    height: 200px;
     width: 250px;
     margin: 0 !important;
     text-overflow: ellipsis;
